fixed www references to chicagolobbists.org

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,20 +3,20 @@
 <head>
 	<!-- Title -->
 	<title>{{ page.title }}</title>
-	<link rel="Shortcut Icon" href="http://chicagolobbyists.org/favicon.ico" type="image/x-icon" />
+	<link rel="Shortcut Icon" href="http://www.chicagolobbyists.org/favicon.ico" type="image/x-icon" />
 	
 	<!-- Info -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="google-site-verification" content="6oHOT6PXw490mF1qyuiToMoG96gA85-kTbNYyL3UtTo" />
 	
 	<!-- Styles -->
-	<link rel="stylesheet" type="text/css" media="all" href="http://chicagolobbyists.org/stylesheets/master.css" />
+	<link rel="stylesheet" type="text/css" media="all" href="http://www.chicagolobbyists.org/stylesheets/master.css" />
 	
 	<link rel="alternate" type="application/atom+xml" title="Chicago Lobbyists Blog" href="http://feeds.feedburner.com/chicagolobbyists-blog" />
 
 	<!-- JavaScript -->
-  <script src="http://chicagolobbyists.org/javascripts/jquery.min.js" type="text/javascript"></script>
-  <script src="http://chicagolobbyists.org/javascripts/analytics_lib.js" type="text/javascript"></script>
+  <script src="http://www.chicagolobbyists.org/javascripts/jquery.min.js" type="text/javascript"></script>
+  <script src="http://www.chicagolobbyists.org/javascripts/analytics_lib.js" type="text/javascript"></script>
 	
 </head>
 <body>
@@ -24,8 +24,8 @@
 <div id="nav">
   <div id="nav-content">
     <ul>
-      <li class=""><a href="http://chicagolobbyists.org/">Home</a></li>
-      <li class=""><a href="http://chicagolobbyists.org/about">About</a></li>
+      <li class=""><a href="http://www.chicagolobbyists.org/">Home</a></li>
+      <li class=""><a href="http://www.chicagolobbyists.org/about">About</a></li>
       <li class="current"><a href="http://blog.chicagolobbyists.org">Blog</a></li>
     </ul>
   </div>
@@ -36,9 +36,9 @@
 <div id="content">
   <!-- Header -->
 <div id="header">
-  <div id="logo"><a href="http://chicagolobbyists.org/"><img alt="Chicago Lobbyists" src="http://chicagolobbyists.org/images/logo.png" /></a></div>
+  <div id="logo"><a href="http://www.chicagolobbyists.org/"><img alt="Chicago Lobbyists" src="http://www.chicagolobbyists.org/images/logo.png" /></a></div>
   <div id="search">
-  	  <form action="http://chicagolobbyists.org/search" method="get">
+  	  <form action="http://www.chicagolobbyists.org/search" method="get">
 	    <input class="hint" type="text" title="Find&hellip;" name="q"/>
 	    <input type="submit" value="Search" />
 	  </form>
